testData/annotator/atOperator.R
x1@x2 +
  x2@<error descr="R grammar doesn't allow expression of this kind here"><info descr="R_NAMESPACE">x3</info>::x4</error> +
  x5@<error descr="R grammar doesn't allow expression of this kind here">(x6 + 1)</error> +
  x7@<error descr="R grammar doesn't allow expression of this kind here">1</error> +
  x8@"hello"